# cafa6

./: .gitignore  README.md  ablations.py  ensembles.py  esm_taxon_predictor.py  explore_data.py  foldseek_knn.py  generate_submission.py  merge_submissions.py  nlp_prediction.py  pyproject.toml  taxon_ids.txt  taxonomy.py  temporal_split_validation.py  train.py  train_mlps.ipynb
cafaeval/: evaluation.py  keras_metrics.py  parser.py  tests.py
models/: blast_knn.py  lr_esm_taxons.py
utils/: data.py  training.py
